fix: fixed content shift on daily routine page after clicking edit icon

--- a/src/index.css
+++ b/src/index.css
@@ -371,6 +371,10 @@ footer {
   margin: 0 1em;
 }
 
+.challenge-mode-container {
+  margin: 2em 0;
+}
+
 .daily-routine-title {
   font-size: 1.5em;
 }
@@ -1631,6 +1635,10 @@ select option:checked {
   width: 1.25em;
   padding: .25em .5em;
   fill: rgb(197, 197, 197)
+}
+
+.edit-icon-daily-routine {
+  padding: 0 1em 0 0;
 }
 
 .edit-icon-symbol.dark-mode-theme,
